Fix horizontal scrolling!

--- a/assets/stylesheets/scss/components/_components.figure-image.scss
+++ b/assets/stylesheets/scss/components/_components.figure-image.scss
@@ -30,7 +30,7 @@
 
 .figure-image {
 	position: relative;
-	// overflow: hidden;
+	overflow: hidden;
 
 	// a {
 	// 	position: absolute !important;
